# learning-open-gl

./: CMakeLists.txt
res/shaders/: GL_basic-frag.shader  GL_basic-vert.shader
src/: Main.cpp
